--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 org.gradle.jvmargs=-Xmx2G
-
 # Fabric Properties (https://fabricmc.net/develop)
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.2
 loader_version=0.15.1
-
 # Mod Properties
 mod_version=0.1.0
-maven_group=com.example
-archives_base_name=addon-template
-
+maven_group=me.earth
+archives_base_name=meteor-pingbypass-addon
 # Dependencies
-
+pb_version=1.20.4-0.0.1
 # Meteor (https://maven.meteordev.org)
 meteor_version=0.5.6-SNAPSHOT
